WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269234
[LBSE] Fix custom/pattern-userSpaceOnUse-userToBaseTransform.xhtml
https://bugs.webkit.org/show_bug.cgi?id=269234
Summary
[LBSE] Fix custom/pattern-userSpaceOnUse-userToBaseTransform.xhtml
Rob Buis
Reported
2024-02-12 13:34:37 PST
Fix custom/pattern-userSpaceOnUse-userToBaseTransform.xhtml
Attachments
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2024-02-12 13:36:15 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24279
Radar WebKit Bug Importer
Comment 2
2024-02-19 13:35:14 PST
<
rdar://problem/123263739
>
EWS
Comment 3
2024-02-21 11:15:06 PST
Committed
275117@main
(c443c971c715): <
https://commits.webkit.org/275117@main
> Reviewed commits have been landed. Closing PR #24279 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug