Cherry-pick 275117@main (c443c971c715). https://bugs.webkit.org/show_bug.cgi?id=269234

Fix custom/pattern-userSpaceOnUse-userToBaseTransform.xhtml
    https://bugs.webkit.org/show_bug.cgi?id=269234

    Reviewed by Nikolas Zimmermann.

    When determining RenderSVGRoot as root layer we also calculate
    any padding/border values as part of offsetFromAncestor, this
    means for patterns painting would be wrongly offset for pattern
    content. Instead, use the RenderSVGRoot, viewport as root layer
    which discards any border/padding for the pattern content painting.

    * LayoutTests/platform/glib/svg/custom/pattern-userSpaceOnUse-userToBaseTransform-with-viewBox-expected.txt: Added.
    * LayoutTests/platform/ios/svg/custom/pattern-userSpaceOnUse-userToBaseTransform-with-viewBox-expected.txt: Added.
    * LayoutTests/platform/mac-sonoma-wk2-lbse-text/TestExpectations:
    * LayoutTests/platform/mac-sonoma-wk2-lbse-text/svg/custom/pattern-userSpaceOnUse-userToBaseTransform-with-viewBox-expected.txt: Added.
    * LayoutTests/svg/custom/pattern-userSpaceOnUse-userToBaseTransform-with-viewBox-expected.png: Added.
    * LayoutTests/svg/custom/pattern-userSpaceOnUse-userToBaseTransform-with-viewBox-expected.txt: Added.
    * LayoutTests/svg/custom/pattern-userSpaceOnUse-userToBaseTransform-with-viewBox.xhtml: Added.
    * Source/WebCore/rendering/RenderLayer.cpp:
    (WebCore::RenderLayer::paintSVGResourceLayer):
    (WebCore::RenderLayer::enclosingSVGRootLayer const): Deleted.
    * Source/WebCore/rendering/RenderLayer.h:

    Canonical link: https://commits.webkit.org/275117@main

Canonical link: https://commits.webkit.org/274313.174@webkitglib/2.44